# cachekit-py

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  SECURITY.md  basedpyright.json  checkmake.ini  codecov.yml  context7.json  deny.toml  llms.txt  pyproject.toml  pyrightconfig.json  release-please-config.json
.cargo/: config.toml
.claude/: coderabbit-loop-83.json
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml  pull_request_template.md  syft.yaml
.github/workflows/: attestation-check.yml  ci.yml  codeql.yml  fuzz-smoke.yml  release-please.yml  security-deep.yml  security-fast.yml  security-medium.yml
.hooks/: check-no-internal-docs.sh
docs/: CONTRIBUTING.md  QUICK_START.md  README.md  api-reference.md  comparison.md  configuration.md  conftest.py  data-flow-architecture.md  error-codes.md  getting-started.md  performance.md  troubleshooting.md
docs/backends/: README.md  cachekitio.md  custom.md  file.md  index.md  memcached.md  none.md  redis.md
docs/features/: adaptive-timeouts.md  circuit-breaker.md  distributed-locking.md  interop-mode.md  l1-invalidation.md  prometheus-metrics.md  reference-caching.md  rust-serialization.md  ssrf-protection.md  zero-knowledge-encryption.md
docs/guides/: backend-guide.md  serializer-guide.md
docs/serializers/: README.md  arrow.md  auto.md  custom.md  default.md  encryption.md  index.md  orjson.md  pydantic.md
rust/: Cargo.toml
rust/fuzz/: .gitignore  Cargo.toml  Makefile  README.md  triage_report.txt
rust/fuzz/corpus/: CORPUS_INFO.md
rust/fuzz/fuzz_targets/: byte_storage_checksum_collision.rs  byte_storage_compress.rs  byte_storage_corrupted_envelope.rs  byte_storage_decompress.rs  byte_storage_empty_data.rs  byte_storage_format_injection.rs  byte_storage_integer_overflow.rs  encryption_aad_injection.rs  encryption_key_derivation.rs  encryption_large_payload.rs  encryption_nonce_reuse.rs  encryption_roundtrip.rs  encryption_truncated_ciphertext.rs  integration_layered_security.rs
rust/fuzz/scripts/: generate_corpus.sh  minimize_corpus.sh  triage_crashes.sh  validate_corpus.sh
scripts/: _common.sh  build-multiarch-linux.sh  fuzz-python.sh  install-security-tools.sh  security-report.sh  version-check.sh
tests/: README.md  conftest.py  test_decorator_intent_examples.py
(+272 files in other folders)
